small bug in create index

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -353,7 +353,7 @@
         "  inverted_index.term_total = term_total\n",
         "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
         "  if needUpdateDocTitleDic:\n",
-        "    inverted_idx.doc_id_to_title = united_title_corpus.collectAsMap()\n",
+        "    inverted_index.doc_id_to_title = united_title_corpus.collectAsMap()\n",
         "  # write the global stats out\n",
         "  inverted_index.write_index('.', pathName)\n",
         "  # upload to gs\n",
