--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -632,12 +632,13 @@
         "#RDD of our temporary corpus - delete when build the real index TODO\n",
         "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
         "general_1000_docs_anchor_text = parquetFile.limit(1000).select(\"id\",\"anchor_text\").rdd \n",
-        "general_1000_docs_anchor_text_flat = general_1000_docs_anchor_text.map(lambda x : (x[0],\", \".join([y[\"text\"] for y in x[1]])))\n",
         "\n",
         "in_train_test_docs_anchor_text = df.select(\"id\",\"anchor_text\").rdd \n",
-        "in_train_test_docs_anchor_text_flat = in_train_test_docs_anchor_text.map(lambda x : (x[0],\", \".join([y[\"text\"] for y in x[1]])))\n",
         "\n",
-        "united_anchor_text_corpus = in_train_test_docs_anchor_text_flat.union(general_1000_docs_anchor_text_flat).distinct()"
+        "united_anchor_text_corpus_pointers = in_train_test_docs_anchor_text.union(general_1000_docs_anchor_text).distinct()\n",
+        "\n",
+        "# Pointed documents !!! \n",
+        "united_anchor_text_corpus = united_anchor_text_corpus_pointers.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))"
       ],
       "id": "XwQJlU3U9oYF"
     },
