--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -25,8 +25,7 @@
       "execution_count": null,
       "id": "40c463fa",
       "metadata": {
-        "id": "40c463fa",
-        "cellView": "form"
+        "id": "40c463fa"
       },
       "outputs": [],
       "source": [
@@ -632,13 +631,12 @@
         "#RDD of our temporary corpus - delete when build the real index TODO\n",
         "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
         "general_1000_docs_anchor_text = parquetFile.limit(1000).select(\"id\",\"anchor_text\").rdd \n",
-        "\n",
+        "general_1000_docs_anchor_text_after_flat = general_1000_docs_anchor_text.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))\n",
         "in_train_test_docs_anchor_text = df.select(\"id\",\"anchor_text\").rdd \n",
+        "in_train_test_docs_anchor_text_after_flat = in_train_test_docs_anchor_text.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))\n",
         "\n",
-        "united_anchor_text_corpus_pointers = in_train_test_docs_anchor_text.union(general_1000_docs_anchor_text).distinct()\n",
-        "\n",
-        "# Pointed documents !!! \n",
-        "united_anchor_text_corpus = united_anchor_text_corpus_pointers.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))"
+        "# Pointed documents !!!\n",
+        "united_anchor_text_corpus = in_train_test_docs_anchor_text_after_flat.union(general_1000_docs_anchor_text_after_flat).distinct()"
       ],
       "id": "XwQJlU3U9oYF"
     },
