calculation for norm per doc id

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "40c463fa",
       "metadata": {
         "id": "40c463fa"
@@ -283,6 +283,14 @@
         "       tokens_wo_dup.append(token)\n",
         "  return [(token, (id, token_counter[token])) for token in tokens_wo_dup]\n",
         "\n",
+        "\n",
+        "def doc_to_term_counter(text, removeStopword):\n",
+        "  tokens = [token.group() for token in RE_WORD.finditer(text.lower())]\n",
+        "  if removeStopword:\n",
+        "    tokens = [token for token in tokens if token not in all_stopwords]\n",
+        "  token_counter = Counter(tokens)\n",
+        "  return token_counter\n",
+        "\n",
         "#reduce_word_counts: operates on the pairs returned by word_count, gets a list of values (unsorted posting list) and sorts it (Returns a sorted posting list by wiki_id)\n",
         "def reduce_word_counts(unsorted_pl):\n",
         "  ''' Parameters:\n",
@@ -339,7 +347,7 @@
       "outputs": [],
       "source": [
         "# create inverted index instance & write it to GCP function\n",
-        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, pathName, bucket, needUpdateDocTitleDic):\n",
+        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, doc_id_to_norm_body, pathName, bucket, needUpdateDocTitleDic):\n",
         "  # Create inverted index instance\n",
         "  inverted_index = InvertedIndex()\n",
         "  # Adding the posting locations dictionary to the inverted index\n",
@@ -351,6 +359,7 @@
         "  # Added term_total dict\n",
         "  inverted_index.term_total = term_total\n",
         "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
+        "  inverted_index. = \n",
         "  if needUpdateDocTitleDic:\n",
         "    inverted_index.doc_id_to_title = united_title_corpus.collectAsMap()\n",
         "  # write the global stats out\n",
@@ -444,6 +453,11 @@
         "w2df_dict_body = calculate_df(postings_filtered_body).collectAsMap()\n",
         "DL_body = united_body_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
         "term_total_body = (word_counts_body.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+        "\n",
+        "N = len(DL_body)\n",
+        "doc_id_to_token_counter_body = united_body_corpus.map(lambda x: (x[0], doc_to_term_counter(x[1], True))\n",
+        "doc_id_to_norm_body = doc_id_to_token_counter.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_body[x[0]]) * math.log(N / w2df_dict_body.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+        "\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_filtered_body, \"index_body\").collect()"
       ]
@@ -490,7 +504,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, 'index_body', bucket_name, False)"
+        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, doc_id_to_norm_body,'index_body', bucket_name,False)"
       ]
     },
     {
