--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -290,6 +290,7 @@
         "    tokens = [token for token in tokens if token not in all_stopwords]\n",
         "  token_counter = Counter(tokens)\n",
         "  return token_counter\n",
+        "  \n",
         "\n",
         "#reduce_word_counts: operates on the pairs returned by word_count, gets a list of values (unsorted posting list) and sorts it (Returns a sorted posting list by wiki_id)\n",
         "def reduce_word_counts(unsorted_pl):\n",
@@ -347,7 +348,7 @@
       "outputs": [],
       "source": [
         "# create inverted index instance & write it to GCP function\n",
-        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, doc_id_to_norm_body, pathName, bucket, needUpdateDocTitleDic):\n",
+        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, doc_id_to_norm, pathName, bucket, needUpdateDocTitleDic):\n",
         "  # Create inverted index instance\n",
         "  inverted_index = InvertedIndex()\n",
         "  # Adding the posting locations dictionary to the inverted index\n",
@@ -359,7 +360,7 @@
         "  # Added term_total dict\n",
         "  inverted_index.term_total = term_total\n",
         "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
-        "  inverted_index. = \n",
+        "  inverted_index.doc_id_to_norm = doc_id_to_norm\n",
         "  if needUpdateDocTitleDic:\n",
         "    inverted_index.doc_id_to_title = united_title_corpus.collectAsMap()\n",
         "  # write the global stats out\n",
@@ -455,8 +456,8 @@
         "term_total_body = (word_counts_body.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "\n",
         "N = len(DL_body)\n",
-        "doc_id_to_token_counter_body = united_body_corpus.map(lambda x: (x[0], doc_to_term_counter(x[1], True))\n",
-        "doc_id_to_norm_body = doc_id_to_token_counter.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_body[x[0]]) * math.log(N / w2df_dict_body.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+        "doc_id_to_token_counter_body = united_body_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
+        "doc_id_to_norm_body = doc_id_to_token_counter_body.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_body[x[0]]) * math.log(N / w2df_dict_body.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
         "\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_filtered_body, \"index_body\").collect()"
@@ -565,6 +566,11 @@
         "w2df_dict_title = calculate_df(postings_title).collectAsMap()\n",
         "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[1], x[0], False)).collectAsMap()\n",
         "term_total_title = (word_counts_title.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+        "\n",
+        "N = len(DL_title)\n",
+        "doc_id_to_token_counter_title = united_title_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
+        "doc_id_to_norm_title = doc_id_to_token_counter_title.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_title[x[0]]) * math.log(N / w2df_dict_title.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+        "\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_title, \"index_title\").collect()"
       ],
@@ -611,7 +617,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, 'index_title', bucket_name, True)"
+        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, doc_id_to_norm_title, 'index_title', bucket_name, True)"
       ],
       "id": "vUgccHSlwAES"
     },
@@ -678,6 +684,11 @@
         "w2df_anchor_text = calculate_df(postings_anchor_text).collectAsMap()\n",
         "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1]), x[0], True)).collectAsMap()\n",
         "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+        "\n",
+        "N = len(DL_anchor_text)\n",
+        "doc_id_to_token_counter_anchor_text = united_anchor_text_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
+        "doc_id_to_norm_anchor_text = united_anchor_text_corpus.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_anchor_text[x[0]]) * math.log(N / w2df_anchor_text.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+        "\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_anchor_text, \"index_anchor_text\").collect()"
       ],
@@ -724,7 +735,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, 'index_anchor_text', bucket_name, False)"
+        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, doc_id_to_norm_anchor_text, 'index_anchor_text', bucket_name, False)"
       ],
       "id": "uMMSunMF9oYH"
     }
