set tokenize as function

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -22,10 +22,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "40c463fa",
       "metadata": {
-        "id": "40c463fa"
+        "id": "40c463fa",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -38,12 +39,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this notebook, we will create our inverted index, by reading the wiki dump file from gcp bucket.\n",
-        "Our inverted index will be saved in our GCP account storage, and will be used for our search engine.\n",
+        "In this notebook, we will create our inverted indices, by reading the wiki dump file from a gcp bucket.\n",
+        "Our indices will be saved in our GCP bucket storage, and will be used for our search engine.\n",
         "\n",
-        "We will create 3 instances of inverted indexes: one for the title, one for the body and one for the anchor text.\n",
+        "We will create 3 instances of inverted index: one for the title, one for the body and one for the anchor text.\n",
         "\n",
-        "We will use the code of assignment 3.\n",
+        "We will use the InvertedIndex python object by import the class module.\n",
         "\n",
         "### Setup - General imports:"
       ],
@@ -78,12 +79,11 @@
         "import pickle\n",
         "import pandas as pd\n",
         "from google.cloud import storage\n",
+        "from inverted_index_gcp import InvertedIndex\n",
         "\n",
         "import hashlib\n",
         "def _hash(s):\n",
-        "    return hashlib.blake2b(bytes(s, encoding='utf8'), digest_size=5).hexdigest()\n",
-        "\n",
-        "nltk.download('stopwords')"
+        "    return hashlib.blake2b(bytes(s, encoding='utf8'), digest_size=5).hexdigest()"
       ]
     },
     {
@@ -184,18 +184,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "ad55e80f",
-      "metadata": {
-        "id": "ad55e80f"
-      },
-      "outputs": [],
-      "source": [
-        "from inverted_index_gcp import InvertedIndex"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "13eabea6",
       "metadata": {
         "id": "13eabea6"
@@ -225,10 +213,15 @@
       },
       "outputs": [],
       "source": [
+        "nltk.download('stopwords')\n",
         "english_stopwords = frozenset(stopwords.words('english'))\n",
-        "corpus_stopwords = ['category', 'references', 'also', 'links', 'extenal', 'see', 'thumb']\n",
-        "RE_WORD = re.compile(r\"\"\"[\\#\\@\\w](['\\-]?\\w){2,24}\"\"\", re.UNICODE)\n",
-        "all_stopwords = english_stopwords.union(corpus_stopwords)"
+        "corpus_stopwords = [\"category\", \"references\", \"also\", \"external\", \"links\", \n",
+        "                    \"may\", \"first\", \"see\", \"history\", \"people\", \"one\", \"two\", \n",
+        "                    \"part\", \"thumb\", \"including\", \"second\", \"following\", \n",
+        "                    \"many\", \"however\", \"would\", \"became\"]\n",
+        "\n",
+        "all_stopwords = english_stopwords.union(corpus_stopwords)\n",
+        "RE_WORD = re.compile(r\"\"\"[\\#\\@\\w](['\\-]?\\w){2,24}\"\"\", re.UNICODE)"
       ]
     },
     {
@@ -250,32 +243,34 @@
       },
       "outputs": [],
       "source": [
-        "english_stopwords = frozenset(stopwords.words('english'))\n",
-        "corpus_stopwords = [\"category\", \"references\", \"also\", \"external\", \"links\", \n",
-        "                    \"may\", \"first\", \"see\", \"history\", \"people\", \"one\", \"two\", \n",
-        "                    \"part\", \"thumb\", \"including\", \"second\", \"following\", \n",
-        "                    \"many\", \"however\", \"would\", \"became\"]\n",
-        "\n",
-        "all_stopwords = english_stopwords.union(corpus_stopwords)\n",
-        "RE_WORD = re.compile(r\"\"\"[\\#\\@\\w](['\\-]?\\w){2,24}\"\"\", re.UNICODE)\n",
-        "\n",
         "NUM_BUCKETS = 124\n",
         "def token2bucket_id(token):\n",
         "  return int(_hash(token),16) % NUM_BUCKETS\n",
         "\n",
-        "#word_count: Count the frequency of each word in the given text (tf), and choose if we want to remove stopword by using removeStopword boolean argument.\n",
+        "def tokenize(text, removeStopword):\n",
+        "  '''\n",
+        "  Returns list of tokens after tokenize the given text.\n",
+        "  choose if we want to remove stopword by using removeStopword boolean argument.\n",
+        "  '''\n",
+        "  tokens = [token.group() for token in RE_WORD.finditer(text.lower())]\n",
+        "  if removeStopword:\n",
+        "    tokens = [token for token in tokens if token not in all_stopwords]\n",
+        "  return tokens\n",
+        "    \n",
         "def word_count(text, id, removeStopword):\n",
-        "  '''Parameters:\n",
+        "  '''\n",
+        "  Count the frequency of each word in the given text (tf),\n",
+        "  and choose if we want to remove stopword by using removeStopword boolean argument.\n",
+        "\n",
+        "  Parameters:\n",
         "  -----------\n",
         "    text: str: Text/title/anchor text of one document\n",
         "    id: int: Document id\n",
         "  Returns:\n",
         "  --------\n",
-        "    List of tuples A list of (token, (doc_id, tf)) pairs \n",
+        "    A list of (token, (doc_id, tf)) pairs \n",
         "  '''\n",
-        "  tokens = [token.group() for token in RE_WORD.finditer(text.lower())]\n",
-        "  if removeStopword:\n",
-        "    tokens = [token for token in tokens if token not in all_stopwords]\n",
+        "  tokens = tokenize(text, removeStopword)\n",
         "  token_counter = Counter(tokens)\n",
         "  tokens_wo_dup = []\n",
         "  for token in tokens:\n",
@@ -285,16 +280,20 @@
         "\n",
         "\n",
         "def doc_to_term_counter(text, removeStopword):\n",
-        "  tokens = [token.group() for token in RE_WORD.finditer(text.lower())]\n",
-        "  if removeStopword:\n",
-        "    tokens = [token for token in tokens if token not in all_stopwords]\n",
+        "  '''\n",
+        "  Calculates word counter for a given document\n",
+        "  '''\n",
+        "  tokens = tokenize(text, removeStopword)\n",
         "  token_counter = Counter(tokens)\n",
         "  return token_counter\n",
         "  \n",
         "\n",
-        "#reduce_word_counts: operates on the pairs returned by word_count, gets a list of values (unsorted posting list) and sorts it (Returns a sorted posting list by wiki_id)\n",
         "def reduce_word_counts(unsorted_pl):\n",
-        "  ''' Parameters:\n",
+        "  '''\n",
+        "  Gets a list of values (unsorted posting list) and returns a sorted list (sorted posting list by wiki_id)\n",
+        "  (Operates on the pairs returned by word_count)\n",
+        "\n",
+        "  Parameters:\n",
         "  -----------\n",
         "    unsorted_pl: A list of (wiki_id, tf) tuples \n",
         "  Returns:\n",
@@ -303,25 +302,23 @@
         "  '''\n",
         "  return sorted(unsorted_pl,key=lambda x: x[0])\n",
         "\n",
-        "#calculate_df takes a posting list RDD and returns an RDD where each element is a (token, df) pair\n",
         "def calculate_df(postings):\n",
         "  ''' Takes a posting list RDD and calculate the df for each token.\n",
-        "  Parameters: postings: An RDD where each element is a (token, posting_list) pair.\n",
+        "  Parameters: Postings is an RDD where each element is a (token, posting_list) pair.\n",
         "  Returns: An RDD where each element is a (token, df) pair.\n",
         "  '''\n",
         "  return postings.groupByKey().mapValues(lambda x: len(list(x)[0]))\n",
         "\n",
-        "# partitions the posting list, writes out each bucket, and returns information about the location on disk of each posting list.\n",
         "def partition_postings_and_write(postings, storage_path):\n",
-        "  '''Parameters:\n",
+        "  '''\n",
+        "  partitions the posting list, writes out each bucket,\n",
+        "  and returns information about the location on storage of each posting list.\n",
+        "\n",
+        "  Parameters:\n",
         "  -----------\n",
-        "    postings: RDD\n",
-        "      An RDD where each item is a (w, posting_list) pair.\n",
-        "      storage_path - where to write \n",
-        "  Returns:\n",
-        "  --------\n",
-        "    RDD\n",
-        "      An RDD where each item is a posting locations dictionary for a bucket.\n",
+        "    postings: an RDD where each item is a (w, posting_list) pair.\n",
+        "    storage_path: where to write in storage \n",
+        "  Returns: an RDD where each item is a posting locations dictionary for a bucket.\n",
         "  '''\n",
         "  return (\n",
         "      postings\n",
@@ -329,12 +326,12 @@
         "      .groupByKey()\n",
         "      .map(lambda x: InvertedIndex.write_a_posting_list(x, bucket_name, storage_path)))\n",
         "\n",
-        "\n",
-        "# calculate docs len\n",
         "def calculate_DL(text, id, removeStopword):\n",
-        "  tokens = [token.group() for token in RE_WORD.finditer(text.lower())]\n",
-        "  if removeStopword:\n",
-        "    tokens = [token for token in tokens if token not in all_stopwords]\n",
+        "  '''\n",
+        "  calculate docs len. returns a tuple of (id, doc len)\n",
+        "  choose if we want to remove stopword by using removeStopword boolean argument.\n",
+        "  '''\n",
+        "  tokens = tokenize(text, removeStopword)\n",
         "  return((id,len(tokens)))"
       ]
     },
@@ -347,9 +344,10 @@
       },
       "outputs": [],
       "source": [
-        "# create inverted index instance & write it to GCP function\n",
         "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, doc_id_to_norm, pathName, bucket, needUpdateDocTitleDic):\n",
-        "  # Create inverted index instance\n",
+        "  '''\n",
+        "  Create inverted index instance & write it to GCP function\n",
+        "  '''\n",
         "  inverted_index = InvertedIndex()\n",
         "  # Adding the posting locations dictionary to the inverted index\n",
         "  inverted_index.posting_locs = super_posting_locs\n",
@@ -391,6 +389,7 @@
       "outputs": [],
       "source": [
         "# Another RDD with the files of our train data set of 30-queries, to make sure that we have those files in our train corpus\n",
+        "#todo - delete when working on the real corpus\n",
         "df = parquetFile[parquetFile[\"id\"].isin(docsID)]"
       ]
     },
