added avgDl field in inverted index creation

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -359,6 +359,7 @@
         "  inverted_index.term_total = term_total\n",
         "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
         "  inverted_index.doc_id_to_norm = doc_id_to_norm\n",
+        "  inverted_index.avgDl = sum(list(DL_dic.values()))/len(DL_dic) # avg documents length in the index\n",
         "  if needUpdateDocTitleDic:\n",
         "    inverted_index.doc_id_to_title = united_title_corpus.collectAsMap()\n",
         "  # write the global stats out\n",
@@ -453,7 +454,6 @@
         "w2df_dict_body = calculate_df(postings_filtered_body).collectAsMap()\n",
         "DL_body = united_body_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
         "term_total_body = (word_counts_body.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
-        "\n",
         "N = len(DL_body)\n",
         "doc_id_to_token_counter_body = united_body_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
         "doc_id_to_norm_body = doc_id_to_token_counter_body.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_body[x[0]]) * math.log(N / w2df_dict_body.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -565,7 +565,6 @@
         "w2df_dict_title = calculate_df(postings_title).collectAsMap()\n",
         "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[1], x[0], False)).collectAsMap()\n",
         "term_total_title = (word_counts_title.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
-        "\n",
         "N = len(DL_title)\n",
         "doc_id_to_token_counter_title = united_title_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
         "doc_id_to_norm_title = doc_id_to_token_counter_title.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_title[x[0]]) * math.log(N / w2df_dict_title.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -683,7 +682,6 @@
         "w2df_anchor_text = calculate_df(postings_anchor_text).collectAsMap()\n",
         "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1]), x[0], True)).collectAsMap()\n",
         "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
-        "\n",
         "N = len(DL_anchor_text)\n",
         "doc_id_to_token_counter_anchor_text = united_anchor_text_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
         "doc_id_to_norm_anchor_text = united_anchor_text_corpus.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_anchor_text[x[0]]) * math.log(N / w2df_anchor_text.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
