few changes to work with the gcp

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -79,7 +79,8 @@
         "import pickle\n",
         "import pandas as pd\n",
         "from google.cloud import storage\n",
-        "from inverted_index_gcp import InvertedIndex\n",
+        "import numpy as np\n",
+        "import mat\n",
         "\n",
         "import hashlib\n",
         "def _hash(s):\n",
@@ -180,6 +181,18 @@
         "sc.addFile(\"/home/dataproc/inverted_index_gcp.py\")\n",
         "sys.path.insert(0,SparkFiles.getRootDirectory())"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from inverted_index_gcp import InvertedIndex"
+      ],
+      "metadata": {
+        "id": "wy3iTvxt2Mkw"
+      },
+      "id": "wy3iTvxt2Mkw",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -683,8 +696,9 @@
         "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1]), x[0], True)).collectAsMap()\n",
         "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "N = len(DL_anchor_text)\n",
-        "doc_id_to_token_counter_anchor_text = united_anchor_text_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
-        "doc_id_to_norm_anchor_text = united_anchor_text_corpus.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_anchor_text[x[0]]) * math.log(N / w2df_anchor_text.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+        "doc_id_to_token_counter_anchor_text = united_anchor_text_corpus.map(lambda x: (x[0], doc_to_term_counter(x[1], True)))\n",
+        "remove_doc_len_0 = doc_id_to_token_counter_anchor_text.filter(lambda x: DL_anchor_text[x[0]] != 0)\n",
+        "doc_id_to_norm_anchor_text = remove_doc_len_0.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL_anchor_text.get(x[0],1)) * math.log(N / w2df_anchor_text.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
         "\n",
         "# partition posting lists and write out\n",
         "_ = partition_postings_and_write(postings_anchor_text, \"index_anchor_text\").collect()"
