--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -80,7 +80,7 @@
         "import pandas as pd\n",
         "from google.cloud import storage\n",
         "import numpy as np\n",
-        "import mat\n",
+        "import math\n",
         "\n",
         "import hashlib\n",
         "def _hash(s):\n",
