create AVG-DL field by rdd operations instead of by lists

--- a/inverted_index_to_gcp.ipynb
+++ b/inverted_index_to_gcp.ipynb
@@ -22,11 +22,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "40c463fa",
       "metadata": {
-        "id": "40c463fa",
-        "cellView": "form"
+        "id": "40c463fa"
       },
       "outputs": [],
       "source": [
@@ -357,30 +356,40 @@
       },
       "outputs": [],
       "source": [
-        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, doc_id_to_norm, pathName, bucket, needUpdateDocTitleDic):\n",
+        "def createInvertedIndexInstance(super_posting_locs, w2df_dict, DL_dic, term_total, doc_id_to_norm, avgDl, pathName, bucket, needUpdateDocTitleDic):\n",
         "  '''\n",
         "  Create inverted index instance & write it to GCP function\n",
         "  '''\n",
         "  inverted_index = InvertedIndex()\n",
+        "\n",
         "  # Adding the posting locations dictionary to the inverted index\n",
         "  inverted_index.posting_locs = super_posting_locs\n",
+        "\n",
         "  # Add the token - df dictionary to the inverted index\n",
         "  inverted_index.df = w2df_dict\n",
+        "\n",
         "  # Added DL_body dict\n",
         "  inverted_index.DL = DL_dic\n",
+        "\n",
         "  # Added term_total dict\n",
         "  inverted_index.term_total = term_total\n",
+        "\n",
         "  inverted_index.total_vec_size = len(inverted_index.term_total)\n",
+        "\n",
         "  inverted_index.doc_id_to_norm = doc_id_to_norm\n",
-        "  inverted_index.avgDl = sum(list(DL_dic.values()))/len(DL_dic) # avg documents length in the index\n",
+        "\n",
+        "  inverted_index.avgDl = avgDl # avg documents length in the index\n",
+        "\n",
         "  if needUpdateDocTitleDic:\n",
         "    inverted_index.doc_id_to_title = united_title_corpus.collectAsMap()\n",
+        "\n",
         "  # write the global stats out\n",
         "  inverted_index.write_index('.', pathName)\n",
+        "\n",
         "  # upload to gs\n",
         "  index_src = pathName+\".pkl\"\n",
         "  index_dst = f'gs://{bucket}/postings_gcp/{pathName}/{index_src}'\n",
-        "  !gsutil cp $index_src $index_dst"
+        "  !gsutil cp $index_src $index_dst\n"
       ]
     },
     {
@@ -465,7 +474,9 @@
         "# filtering postings and calculate df\n",
         "postings_filtered_body = postings_body.filter(lambda x: len(x[1])>50)\n",
         "w2df_dict_body = calculate_df(postings_filtered_body).collectAsMap()\n",
-        "DL_body = united_body_corpus.map(lambda x: calculate_DL(x[0], x[1], True)).collectAsMap()\n",
+        "DL_body_rdd = united_body_corpus.map(lambda x: calculate_DL(x[0], x[1], True))\n",
+        "avgDl_body = DL_body_rdd.map(lambda x: x[1]).mean()\n",
+        "DL_body = DL_body_rdd.collectAsMap()\n",
         "term_total_body = (word_counts_body.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "N = len(DL_body)\n",
         "doc_id_to_token_counter_body = united_body_corpus.map(lambda x: (x[1], doc_to_term_counter(x[0], True)))\n",
@@ -517,7 +528,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, doc_id_to_norm_body,'index_body', bucket_name,False)"
+        "createInvertedIndexInstance(super_posting_locs_body, w2df_dict_body, DL_body, term_total_body, doc_id_to_norm_body, avgDl_body ,'index_body', bucket_name,False)"
       ]
     },
     {
@@ -576,7 +587,9 @@
         "postings_title = word_counts_title.groupByKey().mapValues(reduce_word_counts)\n",
         "# calculate df\n",
         "w2df_dict_title = calculate_df(postings_title).collectAsMap()\n",
-        "DL_title = united_title_corpus.map(lambda x: calculate_DL(x[1], x[0], False)).collectAsMap()\n",
+        "DL_title_rdd = united_title_corpus.map(lambda x: calculate_DL(x[1], x[0], False))\n",
+        "avgDl_title = DL_title_rdd.map(lambda x: x[1]).mean()\n",
+        "DL_title = DL_title_rdd.collectAsMap()\n",
         "term_total_title = (word_counts_title.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "N = len(DL_title)\n",
         "doc_id_to_token_counter_title = united_title_corpus.map(lambda x: (x[0], doc_to_term_counter(x[1], True)))\n",
@@ -628,7 +641,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, doc_id_to_norm_title, 'index_title', bucket_name, True)"
+        "createInvertedIndexInstance(super_posting_locs_title, w2df_dict_title, DL_title, term_total_title, doc_id_to_norm_title, avgDl_title, 'index_title', bucket_name, True)"
       ],
       "id": "vUgccHSlwAES"
     },
@@ -693,7 +706,9 @@
         "postings_anchor_text = word_counts_anchor_text.groupByKey().mapValues(reduce_word_counts)\n",
         "# calculate df\n",
         "w2df_anchor_text = calculate_df(postings_anchor_text).collectAsMap()\n",
-        "DL_anchor_text = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1]), x[0], True)).collectAsMap()\n",
+        "DL_anchor_text_rdd = united_anchor_text_corpus.map(lambda x: calculate_DL(str(x[1]), x[0], True))\n",
+        "avgDl_anchor_text = DL_anchor_text_rdd.map(lambda x: x[1]).mean()\n",
+        "DL_anchor_text = DL_anchor_text_rdd.collectAsMap()\n",
         "term_total_anchor_text = (word_counts_anchor_text.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
         "N = len(DL_anchor_text)\n",
         "doc_id_to_token_counter_anchor_text = united_anchor_text_corpus.map(lambda x: (x[0], doc_to_term_counter(x[1], True)))\n",
@@ -746,7 +761,7 @@
       ],
       "source": [
         "#create the inverted index instance, and write it to GCP\n",
-        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, doc_id_to_norm_anchor_text, 'index_anchor_text', bucket_name, False)"
+        "createInvertedIndexInstance(super_posting_locs_title_anchor_text, w2df_anchor_text, DL_anchor_text, term_total_anchor_text, doc_id_to_norm_anchor_text, avgDl_anchor_text, 'index_anchor_text', bucket_name, False)"
       ],
       "id": "uMMSunMF9oYH"
     }
