--- a/MAP_K_calculation_&_Plot_of_engine_performance_.ipynb
+++ b/MAP_K_calculation_&_Plot_of_engine_performance_.ipynb
@@ -6,7 +6,7 @@
       "name": "MAP@K calculation & Plot of engine performance .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCcOUoU7o5h1+O5tWbYxUo",
+      "authorship_tag": "ABX9TyM8KA2nMbyXvpNmPmN9YWGN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "RL90rs3H6VCe"
       },
@@ -95,8 +95,8 @@
         "    return round(float(sum(avg_precision)/len(avg_precision)),3)\n",
         "    \n",
         "# run example\n",
-        "#queries_true_list = []\n",
-        "#queries_predicted_list_resluts = []\n",
+        "#queries_true_list = [q1=[1,2,3], q2=[1,2,3]]\n",
+        "#queries_predicted_list_resluts = [q1=[1,2,3], q2=[1,2,3]]\n",
         "# queries_true_list: list of lists: list of true resulets for queries from train test json file\n",
         "# queries_predicted_list_resluts: list of lists: list of results for queries from our IR engine \n",
         "#map_40 = MAP_at_K(queries_true_list,queries_predicted_list_resluts,k=40)"
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "ituRu4K4-Foc"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "z1nndrw1MbYH"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
         "id": "N4ONATAdyh7i",
         "outputId": "9b0c163d-0a15-48cc-e068-360446f88e87"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
